[RBOY-68] Fix Blog Nav Spacing

--- a/src/scss/form/_form.scss
+++ b/src/scss/form/_form.scss
@@ -109,6 +109,7 @@ form {
     }
 
     .form-actions {
+      padding-bottom: 0;
       margin-right: auto;
     }
 
@@ -143,8 +144,11 @@ form {
       font-size: 24px;
       font-weight: 500;
       line-height: 36px;
-      margin-bottom: 20px;
+      margin: 20px 0;
       text-transform: uppercase;
+      @media (max-width: 991px ) {
+        margin-top: 0;
+      }
     }
   }
 
