--- a/src/scss/modules/_blog.scss
+++ b/src/scss/modules/_blog.scss
@@ -14,7 +14,7 @@
   h2 {
     @extend %subtitle-h4;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin: 20px 0;
     text-transform: uppercase;
   }
 
